--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@testing-library/user-event": "^14.4.3",
     "cross-fetch": "^3.1.5",
     "daisyui": "^2.51.5",
+    "history": "5.2.0",
     "i18next": "^22.4.13",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
